# ScholarSeek

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  PRODUCTION_CHECKLIST.md  README.md  contributing.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  run_react_app.sh  setup.cfg
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  lint.yml  python-tests.yml  run.yml
backend/: .env.development.template  .env.production.template  Dockerfile
backend/api/: models.py  serializers.py  tests.py  urls.py  views.py
backend/web/: production_settings.py  settings.py
cli/: analyzer.py  format.py  main.py  parsing.py  pipeline.py  researcher.py  services.py
cli/tests/: test_format.py  test_main.py  test_pubmed.py  test_researcher.py  test_services.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx  api.ts  index.css
nginx/conf.d/: default.conf  default.conf.template  local.conf.template
scripts/: backup.sh  build-production.sh  deploy-production.sh
src/: analyzer.py  article.py  cli.py  format.py  main.py  paper.py  parsing.py  pipeline.py  researcher.py  services.py  webapp.py
src/pubmed_author_finder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_pubmed.py
tests/: test_cli.py  test_constants.py  test_pubmed.py  test_regex_parsing.py  test_researcher.py  test_services.py  test_webapp.py
web/api/: models.py  serializers.py  tests.py  views.py
web/frontend/: index.html  (+1 more)
(+29 files in other folders)
